--- a/.mergify.yml
+++ b/.mergify.yml
@@ -53,3 +53,12 @@ pull_request_rules:
       backport:
         branches:
           - release/price-feeder/v0.1.x
+
+  - name: Backport patches to the release/price-feeder/v0.2.x branch
+    conditions:
+      - base=main
+      - label=S:backport/price-feeder/v0.2.x
+    actions:
+      backport:
+        branches:
+          - release/price-feeder/v0.2.x
