--- a/.mergify.yml
+++ b/.mergify.yml
@@ -45,6 +45,15 @@ pull_request_rules:
         branches:
           - release/v2.x.x
 
+  - name: Backport patches to the release/v2.x.x branch
+    conditions:
+      - base=main
+      - label=S:backport/v2.x.x
+    actions:
+      backport:
+        branches:
+          - release/v2.x.x
+
   - name: Backport patches to the release/price-feeder/v0.1.x branch
     conditions:
       - base=main
