--- a/infra/packer/Dockerfile.build
+++ b/infra/packer/Dockerfile.build
@@ -28,4 +28,12 @@ COPY x/ x/
 # Build umeed
 RUN make build
 
+# Clone Terra
+WORKDIR /tmp/build/
+
+# Build Terra
+RUN git clone https://github.com/terra-money/core --branch v0.5.18 --single-branch --depth 1 terra
+WORKDIR /tmp/build/terra
+RUN make build
+
 WORKDIR /root
