--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,8 +16,8 @@ builds:
     flags:
       - -tags=badgerdb ledger netgo rocksdb
       - -trimpath
-      - -static
     ldflags:
+      - '-extldflags "-static"'
       - -s -w -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X github.com/cosmos/cosmos-sdk/version.Name=umee -X github.com/cosmos/cosmos-sdk/version.AppName=umeed -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }} -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }} -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger -X github.com/tendermint/tendermint/version.TMCoreSemVer={{ .Env.TM_VERSION }}
     goos:
       - darwin
