--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,11 +14,12 @@ builds:
     binary: umeed
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
-      - -tags=badgerdb ledger netgo rocksdb
+      - -tags=badgerdb ledger netgo
       - -trimpath
     ldflags:
-      - '-extldflags "-static"'
       - -s -w -X main.commit={{.Commit}} -X main.date={{ .CommitDate }} -X github.com/cosmos/cosmos-sdk/version.Name=umee -X github.com/cosmos/cosmos-sdk/version.AppName=umeed -X github.com/cosmos/cosmos-sdk/version.Version={{ .Version }} -X github.com/cosmos/cosmos-sdk/version.Commit={{ .Commit }} -X github.com/cosmos/cosmos-sdk/version.BuildTags=netgo,ledger -X github.com/tendermint/tendermint/version.TMCoreSemVer={{ .Env.TM_VERSION }}
+    env:
+      - CGO_ENABLED=0
     goos:
       - darwin
       - linux
