--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,8 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-      - "v[0-9]+\\.[0-9]+\\.[0-9]+"
-      - "v[0-9]+\\.[0-9]+\\.[0-9]+-rc[0-9]+"
+      - "v[0-9]+\\.[0-9]+\\.[0-9]+" # Official release version tags e.g. v2.0.5
+      - "v[0-9]+\\.[0-9]+\\.[0-9]+-rc[0-9]+" # Release candidate tags e.g. v1.0.3-rc4
   pull_request:
     types: [ opened, synchronize ]
 
@@ -24,7 +24,7 @@ jobs:
         run: echo "TM_VERSION=$(go list -m github.com/tendermint/tendermint | sed 's:.* ::')" >> $GITHUB_ENV
       - name: Build
         uses: goreleaser/goreleaser-action@v2
-        if: ${{ github.event_name == 'pull_request' }}
+        if: github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'Enable:ReleaseBuild')
         with:
           version: latest
           args: build --rm-dist --skip-validate # skip validate skips initial sanity checks in order to be able to fully run
