--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,7 +14,7 @@ builds:
     binary: umeed
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
-      - -tags=netgo ledger
+      - -tags=badgerdb ledger netgo
       - -trimpath
     env:
       - CGO_ENABLED=0
@@ -25,7 +25,6 @@ builds:
       - linux
     goarch:
       - amd64
-      - arm
       - arm64
 
 archives:
