--- a/price-feeder/price-feeder.example.toml
+++ b/price-feeder/price-feeder.example.toml
@@ -21,6 +21,15 @@ providers = [
 ]
 quote = "USD"
 
+[[currency_pairs]]
+base = "USDT"
+providers = [
+  "kraken",
+  "gate",
+  "coinbase"
+]
+quote = "USD"
+
 [account]
 address = "umee15nejfgcaanqpw25ru4arvfd0fwy6j8clccvwx4"
 chain_id = "umee-local-testnet"
