--- a/Dockerfile.protocgen
+++ b/Dockerfile.protocgen
@@ -9,8 +9,7 @@ RUN apk add --no-cache --update \
 
 WORKDIR /workspace
 
-COPY ./go.mod .
-COPY ./go.sum .
+COPY ./go.mod  ./go.sum ./
 
 RUN go mod download
 RUN go install github.com/regen-network/cosmos-proto/protoc-gen-gocosmos
