--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-go@v3
         with:
+          go-version: 1.17
       - name: Get Go Cache
         uses: actions/cache@v3
         with:
