--- a/price-feeder/.goreleaser.yml
+++ b/price-feeder/.goreleaser.yml
@@ -5,7 +5,7 @@ env:
 
 before:
   hooks:
-    - go mod tidy -compat=1.17
+    - go mod tidy -compat=1.18
 
 builds:
   - main: ./
@@ -48,4 +48,4 @@ snapshot:
   name_template: SNAPSHOT-{{ .Commit }}
 
 changelog:
-  skip: true
+  skip: false
