--- a/.github/actions/pack-and-distribute/action.yml
+++ b/.github/actions/pack-and-distribute/action.yml
@@ -10,7 +10,7 @@ runs:
       with:
         registry: us-docker.pkg.dev
         username: _json_key_base64
-        password: '${{ secrets.GCP_SA_KEY }}'
+        password: '${{ inputs.GCP_SA_KEY }}'
     - name: Pack & Distribute Umee Images
       shell: bash
       run: |
