--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -154,7 +154,7 @@ jobs:
         if: env.GIT_DIFF
       - name: Start Local Network via Starport
         run: |
-          starport chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
+          ignite chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
         if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
