--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -154,10 +154,11 @@ jobs:
         if: env.GIT_DIFF
       - name: Start Local Network via Starport
         run: |
-          ignite chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
+          ignite chain serve --reset-once -v -c ./starport.ci.yml  &
+          # ignite chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
         if: env.GIT_DIFF
       - name: Test Local Network Liveness
         run: |
           sleep 1m
-          ./contrib/scripts/test_localnet_liveness.sh 80 5 50 localhost
+          ./contrib/scripts/test_localnet_liveness.sh 40 5 50 localhost
         if: env.GIT_DIFF
