--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -150,11 +150,11 @@ jobs:
         if: env.GIT_DIFF
       - name: Install Starport
         run: |
-          curl https://get.starport.network/starport@v0.22.2! | bash
+          curl https://get.ignite.com/cli! | bash
         if: env.GIT_DIFF
       - name: Start Local Network via Starport
         run: |
-          ignite chain serve --reset-once -v -c ./starport.ci.yml  &
+          /usr/local/bin/ignite chain serve --reset-once -v -c ./starport.ci.yml  &
           # ignite chain serve --reset-once -v -c ./starport.ci.yml > starport.out 2>&1 &
         if: env.GIT_DIFF
       - name: Test Local Network Liveness
